[gd_scene load_steps=2 format=3 uid="uid://c5a46qc4wu8qh"]

[ext_resource type="Script" path="res://inventory_ui.gd" id="1_5v8q7"]

[node name="InventoryUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_5v8q7")

[node name="HotbarContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0

[node name="MainInventoryPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -140.0
offset_top = -175.0
offset_right = 140.0
offset_bottom = 175.0
grow_horizontal = 2
grow_vertical = 2

[node name="GridContainer" type="GridContainer" parent="MainInventoryPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
columns = 4

[node name="ExternalInventoryPanel" type="Panel" parent="."]
visible = false
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ExternalGrid" type="GridContainer" parent="ExternalInventoryPanel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
columns = 6

[node name="Label" type="Label" parent="ExternalInventoryPanel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "Chest"
